--- a/.github/workflows/migrate-packages.yml
+++ b/.github/workflows/migrate-packages.yml
@@ -63,6 +63,10 @@ jobs:
       runs-on: ubuntu-latest
       continue-on-error: true
 
+      permissions:
+        contents: read
+        issues: write
+
       strategy:
         max-parallel: 1
         matrix:
