--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Check gh client auth status for FROM_ORG_PAT secret by saving output to file and post the file as a comment
         run: |
           gh auth status > gh-auth-status.txt
-          gh issue comment ${{ github.event.issue.number }} --body "gh auth status" --body-file gh-auth-status.txt
+          gh issue comment ${{ github.event.issue.number }} --body-file gh-auth-status.txt
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.FROM_ORG_PAT }}
@@ -82,7 +82,7 @@ jobs:
       - name: Check gh client auth status for TO_ORG_PAT secret by saving output to file and post the file as a comment
         run: |
           gh auth status > gh-auth-status.txt
-          gh issue comment ${{ github.event.issue.number }} --body "gh auth status" --body-file gh-auth-status.txt
+          gh issue comment ${{ github.event.issue.number }} --body-file gh-auth-status.txt
         shell: bash
         env:
           GH_TOKEN: ${{ secrets.TO_ORG_PAT }}
