--- a/.github/workflows/find-organization-packages.yml
+++ b/.github/workflows/find-organization-packages.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Check gh client auth status for FROM_ORG_PAT secret by saving output to file and post the file as a comment
         run: |
           gh auth status > gh-auth-status.txt
+          GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           gh issue comment ${{ github.event.issue.number }} --body-file gh-auth-status.txt
         shell: bash
         env:
@@ -82,6 +83,7 @@ jobs:
       - name: Check gh client auth status for TO_ORG_PAT secret by saving output to file and post the file as a comment
         run: |
           gh auth status > gh-auth-status.txt
+          GH_TOKEN=${{ secrets.GITHUB_TOKEN }}
           gh issue comment ${{ github.event.issue.number }} --body-file gh-auth-status.txt
         shell: bash
         env:
